canvas update: 	added template to test html canvas, 	added /canvas route, 	figured out svg was better, svg update: 	used canvas to initialize rgb pixelGrid, 	created class to create layered svg outputs, 	linked palette colors change to svg groups, 	added css to track "active" pixel, backend: 	added original request to conversion post data, 	fixed elusive bug of lossy formats changing rgb values, 	fixed missing colors/pixels output from palette function

--- a/static/css/mvp.css
+++ b/static/css/mvp.css
@@ -222,6 +222,41 @@ table td {
 }
 
 /*********************************************************/
+
+#output-image-container {
+	min-height: 464px;
+	max-height: 464px;
+	max-width: 100%;
+	object-fit: contain;
+	background-color: black;
+
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: center;
+}
+.output-svg-container {
+	min-height: 464px;
+	max-height: 464px;
+}
+.output-svg-container canvas {
+	z-index: -1;
+}
+.output-svg {
+	width: 100%;
+	height: auto;
+	max-height: 100%;
+}
+
+g {
+	shape-rendering: crispEdges;
+}
+rect:hover {
+	cursor: pointer;
+	z-index: 5;
+	filter: invert(0.1) brightness(1.5) drop-shadow(0 0 1px black);
+}
+
+/*********************************************************/
 /* palete form */
 /*********************************************************/
 
